Enhance code settings.

--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -55,7 +55,9 @@ playground.xcworkspace
 
 Carthage/Build
 
-# fastlane
+fastlane
+screenshots
+FastlaneScreenshots
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
