--- a/CodeWalletWidgetApp/Info.plist
+++ b/CodeWalletWidgetApp/Info.plist
@@ -2,8 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>${NSLocationAlwaysUsageDescription}</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Showing your location on the map can be helpfull when selecting a notification location.</string>
+	<string>${NSLocationWhenInUseUsageDescription}</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>${NSLocationAlwaysAndWhenInUseUsageDescription}</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
