--- a/CodeWalletWidgetApp/Info.plist
+++ b/CodeWalletWidgetApp/Info.plist
@@ -2,12 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>${NSLocationAlwaysUsageDescription}</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>${NSLocationWhenInUseUsageDescription}</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>${NSLocationAlwaysAndWhenInUseUsageDescription}</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -30,8 +24,18 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>In order to scan a barcode, please give access to your camera.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>${NSLocationAlwaysAndWhenInUseUsageDescription}</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>${NSLocationAlwaysUsageDescription}</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>${NSLocationWhenInUseUsageDescription}</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>In order to select a barcode, please give access to your photo library.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
